# pocket-tts.cpp

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindFFmpeg.cmake  FindGGML.cmake  FindSentencePiece.cmake
demos/: CMakeLists.txt  ffmpeg_helpers.h  kyutai_pocket-tts-without-voice-cloning.txt  pocket-tts.cpp  sdl_helper.h  util.h
include/pocket_tts/: json.h  pocket_tts.h  ptrs.h  safetensor.h
src/: config.h  context.h  crc-bbf.h  json.cpp  loader.h  pocket_tts.cpp  safetensor.cpp  torch.h  wav.h
src/pocket_tts/conditioners/: text.h
src/pocket_tts/models/: defaults.h  flow_lm.h  mimi.h
src/pocket_tts/modules/: conv.h  gating.h  mimi_transformer.h  mlp.h  rope.h  seanet.h  transformer.h
